LU-369 assert(t_watchdog) failed in quota_chk_acq_common()

Remove the incorrect assert(t_watchdog) in quota_chk_acq_common()
and schedule_dqacq(), since they might be called from recovery
thread, which doesn't have t_watchdog attached.

Signed-off-by: Niu Yawei <niu@whamcloud.com>
Change-Id: I22e65c66827811309e43910e9a4d34251aad99c3
Reviewed-on: http://review.whamcloud.com/870
Tested-by: Hudson
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Johann Lombardi <johann@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>